--- a/Project-iOS/XLProjectName/XLProjectName/Base.lproj/Main.storyboard
+++ b/Project-iOS/XLProjectName/XLProjectName/Base.lproj/Main.storyboard
@@ -1,46 +1,31 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="zOV-V0-1xs">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fwb-rM-UXC">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Networking Examples-->
-        <scene sceneID="kQz-kn-hVZ">
+        <!--View Controller-->
+        <scene sceneID="m5U-hz-1IT">
             <objects>
-                <viewController id="oOM-qU-Vra" customClass="LoginController" customModule="XLProjectName" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="fwb-rM-UXC" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="tbR-v9-2c6"/>
-                        <viewControllerLayoutGuide type="bottom" id="d2b-Hd-gsX"/>
+                        <viewControllerLayoutGuide type="top" id="XkA-wz-TDS"/>
+                        <viewControllerLayoutGuide type="bottom" id="4aR-jB-Jg5"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="abf-Tu-mT9">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <view key="view" contentMode="scaleToFill" id="uvC-EL-1kn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Networking Examples" id="1ki-Np-hkz"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ohZ-iu-QMB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Awt-oE-iws" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="801" y="444"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="li8-7t-S1h">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zOV-V0-1xs" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="wXp-WV-J8K">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="oOM-qU-Vra" kind="relationship" relationship="rootViewController" id="cwP-AB-8Px"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5Q-54-6Jj" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-65" y="444"/>
+            <point key="canvasLocation" x="63" y="423"/>
         </scene>
     </scenes>
 </document>
